Fix automatic updating of closing tags (don't search for the closing tag for single tags).

BUG: 132357